Basic routes/controllers implemented
